--- a/public/hotel.html
+++ b/public/hotel.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/hotel.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/modal.css">
   <script src="js/hotel.js"></script>
 </head>
 <!-- Popup Login Modal -->
@@ -44,10 +46,10 @@
   </div>
   <!-- Nav -->
   <div class="navbar">
-    <a class="nav-item" href="trangchu.html"><i class="fa-solid fa-book"></i>Cẩm nang</a>
-    <a class="nav-item active" href="khachsan.html"><i class="fa-solid fa-building"></i>Khách sạn</a>
-    <a class="nav-item" href="combodulich.html"><i class="fa-solid fa-suitcase-rolling"></i>Combo du lịch</a>
-    <a class="nav-item" href="hotrokhachhang.html"><i class="fa-solid fa-headset"></i>Hỗ trợ khách hàng</a>
+    <a class="nav-item" href="index.html"><i class="fa-solid fa-book"></i>Cẩm nang</a>
+    <a class="nav-item active" href="hotel.html"><i class="fa-solid fa-building"></i>Khách sạn</a>
+    <a class="nav-item" href="travel.html"><i class="fa-solid fa-suitcase-rolling"></i>Combo du lịch</a>
+    <a class="nav-item" href="support.html"><i class="fa-solid fa-headset"></i>Hỗ trợ khách hàng</a>
   </div>
   <!-- Banner -->
   <div class="banner">
